# gixie-bright-control

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: args.rs  brightness.rs  command.rs  config.rs  connection.rs  error.rs  main.rs  suninfo.rs
