[package]
name = "gixie-bright-control"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_repr = "0.1"
simple_logger = "4.2"
tungstenite = "0.20.0"
url = "2.1"
sunrise-sunset-calculator = "1.0"

[profile.release]
debug = false
opt-level = 3
lto = true
strip = true
panic = "abort"
